@@ -8,6 +8,12 @@
 	Ns_Sock and Sock in private nsd.h to have access to it
 	from communication modules without using private nsd.h 
 
+	src/driver.c:
+	nsd/nsd.h:
+	nsd/tclcmds.c: Added ns_queue_writer Tcl command that submits
+	Tcl_Obj to the writer thread. Writer thread will send this Tcl 
+	object to the client.
+
 2006-02-13  Ibrahim Tannir  <itannir@users.sf.net>
 	* nsd/nswin32.c: fixed assigning the stdin, stdout, stderr channels
 	  in order for Tcl to attach them properly when a new thread/interp
